# docker_test

./: docker-compose.yml
searcher/: Dockerfile  go.mod  go.sum  main.go
searcher/internal/api/: sentences.go
searcher/internal/config/: config.go
searcher/internal/search/: client.go  sparser.go
sentencer/: Dockerfile  Makefile  README.md  pyproject.toml
sentencer/sentencer/: constants.py
sentencer/sentencer/cli/: main.py
sentencer/sentencer/tokenizers/: naive.py  nltk.py  spacy.py
sentencer/src/cli/: main.py
sentencer/tests/tokenizers/: test_naive.py
