[tool.poetry]
name = "sentencer"
version = "0.1.0"
description = "A simple CLI tool for breaking raw text into sentences"
authors = ["Kostiantyn Afanasiev <smusmumbr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
nltk = "^3.8.1"
spacy = "^3.7.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.8"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
nuild-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sentencer = "sentencer.cli.main:cli"
